feat: 결제 완료 프로세스 개발 (#19)